--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "8.4.1",
+  "version": "8.5.0",
   "compatibility": ">=12.9.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -11678,6 +11678,7 @@
       "id": "power"
     },
     {
+      "deprecated": true,
       "name": {
         "en": "PV Summarizer",
         "nl": "Zonne-energie Samenvatter",
