--- a/app.json
+++ b/app.json
@@ -10245,7 +10245,7 @@
               "label": {
                 "en": "Fixed hourly costs",
                 "de": "Fixkosten pro Stunde",
-                "nl": "Vaste uurlikse kosten",
+                "nl": "Vaste uurlijkse kosten",
                 "fr": "Coûts horaires fixes",
                 "it": "Costi fissi orari",
                 "sv": "Fasta timkostnader",
